# ark-server-manager

./: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
conductor/: .conductor-state.json  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/lint-stage-enhancement_20260408/: spec.md
conductor/archive/phase0_project_setup_20250408/: metadata.json
conductor/archive/phase1_server_profile_mgmt_20260408/: index.md  metadata.json  spec.md
conductor/archive/phase2_server_lifecycle_20260408/: index.md  spec.md
conductor/archive/phase3_steamcmd_integration_20260408/: metadata.json  spec.md
conductor/code_styleguides/: rust.md  typescript-react.md
scripts/: check-file-lines.sh  test-coverage.sh
src/: App.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crash_report.rs  lib.rs
src-tauri/src/commands/: mod.rs  path_validation.rs  server_control.rs  steam_install.rs
src-tauri/src/models/: profile.rs
src-tauri/src/services/: backup.rs  build_id_checker.rs  health.rs  ini_conversion.rs  mod.rs  rcon_client.rs  retry.rs  server_discovery.rs  server_state.rs  steam_errors.rs  steam_progress.rs  steamcmd_detector.rs  steamcmd_installer.rs  steamcmd_runner.rs  update_manager.rs
src/components/server/: index.ts  (+11 more)
src/lib/: validation.ts
src/stores/: appStore.ts  profilesStore.ts  serverLifecycleStore.ts
src/types/: profile.ts  server.ts
ui-mockup/: design-system.md
(+58 files in other folders)
