[package]
name = "ark-server-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ark_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
dirs = "5"
configparser = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "time", "io-util", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.4"
regex = "1"
once_cell = "1"
sysinfo = "0.32"

[dependencies.rcon]
version = "0.6"
features = ["rt-tokio"]

